2003-09-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/tutorial.itely (A lead sheet): remove
	duplicate chords.

	* Documentation/bibliography/computer-notation.bib (pages): reorganise.

2003-09-03  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/bibliography/computer-notation.bib (isbn): add
	xivcim publication.

2003-09-05  Heikki Junes  <hjunes@cc.hut.fi>

	* GNUmakefile.in: drop lilypond.words for generation.

2003-09-03  Heikki Junes  <hjunes@cc.hut.fi>

	* buildscripts/lilypond.words.py: take filename (also) from an arg.

	* GNUmakefile.in (README_FILES): put lilypond.words to $(outdir).

2003-09-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/figured-bass-alternate.ly (fl): new file.

	* Documentation/topdocs/README.texi (Top): clarifications.

	* Documentation/bibliography/computer-notation.bib (isbn): add phd
	theses of Gieseking and Renz.

	* GNUmakefile.in (README_FILES): remove README.mandrake.

2003-09-01  Heikki Junes  <hjunes@cc.hut.fi>

	* buildscripts/lilypond.words.py: add file. Creates lilypond.words
	from source files and search patterns listed in the script.

	* GNUmakefile.in: add target `lilypond.words'.

	* lilypond.words: remove file, generated by `make lilypond.words'.

	* make/lilypond.{mandrake,redhat,suse}.spec.in: make lilypond.words.

2003-08-31  Heikki Junes  <hjunes@cc.hut.fi>

	* lily/parser.yy, lily/my-lily-lexer.cc: spell it acciaccatura.

2003-08-31  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.9.4 released

	* scripts/convert-ly.py (FatalConversionError.figures_replace):
	rule for < > <-> << >> substitution

	* lily/lexer.ll: exchange meaning of << >> and < > 

	* VERSION (PACKAGE_NAME): 1.9.3 released

	* stepmake/stepmake/help2man-rules.make ($(outdir)/%.1): build man
	pages unconditionally.

2003-08-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/music-glossary.tely (Top): small syntax
	fixes.

	* scm/music-functions.scm (remove-tag): filter \tagged music
	expressions.
