@@ -1,3 +1,9 @@
+2003-09-07  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* scm/font.scm (paper20-style-sheet-alist): add smaller font sizes.
+
+	* mf/GNUmakefile (SAUTER_FONTS): add smaller sizes.
+
 2003-09-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* Documentation/user/tutorial.itely (A lead sheet): remove
